--- a/pom.xml
+++ b/pom.xml
@@ -95,25 +95,15 @@
 			<artifactId>pdfbox</artifactId>
 			<version>2.0.24</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.itextpdf</groupId>
-			<artifactId>itext7-core</artifactId>
-			<version>7.1.16</version>
+			<artifactId>layout</artifactId>
+			<version>7.2.0</version>
 		</dependency>
 
 
 
-
-
-
-
-
 	</dependencies>
-
-
-
-
 
 
 	<build>
